Class::newInstance() is deprecated #97